[project]
name = "db-tinkaton"
version = "0.1.0"
description = "A data blacksmith — smash messy records, forge clean datasets, and extract what matters."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    # Data processing
    "pandas>=2.2",
    "polars>=1.0",
    "numpy>=1.26",
    # MongoDB
    "pymongo>=4.7",
    # Visualization
    "matplotlib>=3.9",
    "plotly>=5.22",
    "tabulate>=0.9",
    # ML / Dataset
    "scikit-learn>=1.5",
    # Utilities
    "rich>=13.7",
    "python-dotenv>=1.0",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "xgboost>=3.2.0",
    "optuna>=4.8.0",
    "torch>=2.11.0",
    "cvxpy>=1.8.2",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0",
    "marimo>=0.6",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinkaton"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
